Fix css for image dimension of cropped image

--- a/omahelsinki/static/css/_omahelsinki.scss
+++ b/omahelsinki/static/css/_omahelsinki.scss
@@ -547,7 +547,6 @@ $omaWrapperPadding: 4rem 0 8rem;
   }
 }
 
-.form-profile-information {
   .profile-picture__picture {
     margin-bottom: 20px;
     img {
@@ -556,7 +555,6 @@ $omaWrapperPadding: 4rem 0 8rem;
       border-radius: 8px;
     }
   }
-}
 
 .cropButton {
   margin-top: 10px;
